ejercicios_6_de_la_tarde

--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[58, 24, 73, 83, 15, 63, 66, 37, 11, 1, 65, 71, 87, 32, 19, 35, 69, 74, 3, 27, 84, 26, 32, 11, 34, 34, 39, 16, 97, 53, 52, 64, 78, 45, 34, 9, 27, 92, 30, 79, 36, 18, 1, 90, 28, 2, 82, 52, 13, 78, 7, 26, 16, 74, 96, 8, 14, 29, 38, 67, 82, 74, 41, 5, 21, 59, 52, 88, 12, 22, 76, 47, 70, 42, 80, 12, 72, 16, 8, 24]\n",
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "import random\n",
+    "\n",
+    "sample_list_1=[]\n",
+    "\n",
+    "for i in range(0,80):\n",
+    "    n = random.randint(0,100)\n",
+    "    sample_list_1.append(n)\n",
+    "print(sample_list_1)\n",
+    "\n",
+    "print(len(sample_list_1))"
    ]
   },
   {
@@ -54,11 +73,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "62"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1=set(sample_list_1)\n",
+    "len(set1)\n",
+    "#No"
    ]
   },
   {
@@ -77,11 +110,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[82, 56, 25, 73, 41, 16, 58, 95, 55, 57, 17, 60, 85, 44, 39, 8, 49, 86, 100, 33, 22, 84, 52, 94, 81, 32, 61, 27, 66, 67, 31, 1, 37, 9, 2, 64, 96, 54, 14, 35, 46, 51, 80, 43, 50, 36, 10, 12, 40, 91, 47, 6, 92, 7, 0, 83, 29, 79]\n",
+      "58\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "import random\n",
+    "\n",
+    "sample_list_2=[]\n",
+    "\n",
+    "for i in range(80):\n",
+    "    n = random.randint(0,100)\n",
+    "    if n not in sample_list_2:\n",
+    "        sample_list_2.append(n)\n",
+    "    \n",
+    "print(sample_list_2)\n",
+    "print (len(sample_list_2))"
    ]
   },
   {
@@ -93,11 +146,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "58"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set2=set(sample_list_2)\n",
+    "len(set2)\n",
+    "#no\n"
    ]
   },
   {
@@ -109,11 +177,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3= set(sample_list_1)-set(sample_list_2)\n",
+    "print(len(set3))"
    ]
   },
   {
@@ -125,11 +205,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4= set(sample_list_2)-set(sample_list_1)\n",
+    "print(len(set4))"
    ]
   },
   {
@@ -141,11 +231,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 6, 8, 10, 16, 22, 25, 32, 36, 41, 43, 44, 46, 51, 54, 55, 56, 57, 58, 60, 61, 66, 67, 73, 79, 80, 84, 85, 86, 92, 96, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "intersection= set1.intersection(sample_list_2)\n",
+    "set5= intersection\n",
+    "print(set5)"
    ]
   },
   {
@@ -165,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,11 +282,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6={}\n",
+    "print(set6)"
    ]
   },
   {
@@ -197,11 +308,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "cannot convert dictionary update sequence element #0 to a sequence",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-b640b8f9efc5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mer\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mset3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mset6\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mset6\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mset6\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mset6\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: cannot convert dictionary update sequence element #0 to a sequence"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "yi= set5\n",
+    "er= set3\n",
+    "\n",
+    "set6= set6.update(yi)\n",
+    "set6= set6.update(er)\n"
    ]
   },
   {
@@ -213,11 +341,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(set6)\n",
+    "set1==set6"
    ]
   },
   {
@@ -229,11 +377,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "check1= set2.issubset(set1)\n",
+    "print(check1)\n",
+    "\n",
+    "check2= set3.issubset(set1)\n",
+    "print(check2)"
    ]
   },
   {
@@ -307,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
