--- a/module-1/lab-tuple-set-dict/your-code/.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/.ipynb
@@ -15,13 +15,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "\n",
-    "ej= (\"I\", )\n",
+    "ej= (1, )\n",
     "print(type(ej))"
    ]
   },
@@ -36,9 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "print(type(ej))"
@@ -59,9 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-8f0609413b18>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-8f0609413b18>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    tuples cant be modified\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "ej.append()\n",
@@ -84,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +118,7 @@
        "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +154,7 @@
        "['h', 'a', 'c', 'k']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +163,7 @@
     "# Your code here\n",
     "tup1= curso[0:4]\n",
     "tup2= curso[4:8]\n",
-    "tup1\n",
+    "tup1 \n",
     "tup2"
    ]
   },
@@ -153,16 +178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "['I', 'r', 'o', 'n', 'a', 'c', 'k']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +195,7 @@
    "source": [
     "# Your code here\n",
     "tup3= tup1 + tup2\n",
-    "tup3==curso\n"
+    "tup3"
    ]
   },
   {
@@ -182,33 +207,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Your code here\n",
-    "print(len(tup1))\n",
-    "print(len(tup2))\n",
-    "len(tup3)==len(tup1+tup2)"
+    "# Your code here\n"
    ]
   },
   {
@@ -224,9 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n",
-    "dex= tup3.index('h')\n",
-    "dex"
+    "# Your code here\n"
    ]
   },
   {
@@ -235,7 +236,7 @@
    "source": [
     "#### Now, use a FOR loop to check whether each letter in the following list is present in `tup3`:\n",
     "\n",
-    "```= [\"\n",
+    "```\n",
     "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
     "```\n",
     "\n",
@@ -246,30 +247,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'true' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-da64067e9513>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mletras\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mletters\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mletras\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mletters\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0mletras\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mtrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtup3\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mletters\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'true' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Your code here\n",
-    "\n",
-    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
-    "\n",
-    "for letras in letters:\n",
-    "    if letras in letters:\n",
-    "        letras == true\n",
-    "print(tup3 in letters)"
+    "# Your code here\n"
    ]
   },
   {
@@ -283,40 +265,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Your code here\n",
-    "\n",
-    "cont = tup3.count(\"true\")\n",
-    "cont"
+    "# Your code here\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
