--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[58, 24, 73, 83, 15, 63, 66, 37, 11, 1, 65, 71, 87, 32, 19, 35, 69, 74, 3, 27, 84, 26, 32, 11, 34, 34, 39, 16, 97, 53, 52, 64, 78, 45, 34, 9, 27, 92, 30, 79, 36, 18, 1, 90, 28, 2, 82, 52, 13, 78, 7, 26, 16, 74, 96, 8, 14, 29, 38, 67, 82, 74, 41, 5, 21, 59, 52, 88, 12, 22, 76, 47, 70, 42, 80, 12, 72, 16, 8, 24]\n",
+      "[66, 90, 18, 1, 38, 23, 9, 96, 59, 86, 82, 72, 1, 81, 13, 71, 94, 34, 65, 78, 50, 47, 0, 50, 24, 29, 52, 73, 88, 1, 75, 95, 75, 78, 25, 38, 13, 44, 10, 95, 75, 48, 51, 2, 63, 39, 47, 20, 19, 64, 62, 96, 3, 47, 91, 36, 27, 5, 35, 82, 20, 28, 1, 24, 49, 22, 12, 86, 53, 11, 82, 60, 12, 43, 25, 53, 78, 27, 92, 71]\n",
       "80\n"
      ]
     }
@@ -73,16 +73,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "62"
+       "56"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[82, 56, 25, 73, 41, 16, 58, 95, 55, 57, 17, 60, 85, 44, 39, 8, 49, 86, 100, 33, 22, 84, 52, 94, 81, 32, 61, 27, 66, 67, 31, 1, 37, 9, 2, 64, 96, 54, 14, 35, 46, 51, 80, 43, 50, 36, 10, 12, 40, 91, 47, 6, 92, 7, 0, 83, 29, 79]\n",
+      "[28, 70, 33, 95, 98, 39, 90, 19, 29, 92, 55, 97, 47, 99, 89, 49, 10, 69, 5, 54, 65, 21, 64, 50, 17, 66, 22, 52, 96, 37, 76, 68, 48, 44, 75, 81, 30, 84, 41, 77, 79, 4, 35, 16, 31, 7, 82, 60, 12, 32, 94, 58, 6, 43, 8, 63, 85, 26]\n",
       "58\n"
      ]
     }
@@ -186,7 +186,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21\n"
+      "27\n"
      ]
     }
    ],
@@ -212,7 +212,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25\n"
+      "29\n"
      ]
     }
    ],
@@ -238,7 +238,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 2, 6, 8, 10, 16, 22, 25, 32, 36, 41, 43, 44, 46, 51, 54, 55, 56, 57, 58, 60, 61, 66, 67, 73, 79, 80, 84, 85, 86, 92, 96, 100}\n"
+      "{5, 10, 12, 19, 22, 28, 29, 35, 39, 43, 44, 47, 48, 49, 50, 52, 60, 63, 64, 65, 66, 75, 81, 82, 90, 92, 94, 95, 96}\n"
      ]
     }
    ],
@@ -289,13 +289,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{}\n"
+      "set()\n"
      ]
     }
    ],
    "source": [
     "# Your code here\n",
-    "set6={}\n",
+    "set6= set()\n",
     "print(set6)"
    ]
   },
@@ -308,28 +308,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "cannot convert dictionary update sequence element #0 to a sequence",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-19-b640b8f9efc5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mer\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mset3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mset6\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mset6\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mset6\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mset6\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: cannot convert dictionary update sequence element #0 to a sequence"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 5, 9, 10, 11, 12, 13, 18, 19, 20, 22, 23, 24, 25, 27, 28, 29, 34, 35, 36, 38, 39, 43, 44, 47, 48, 49, 50, 51, 52, 53, 59, 60, 62, 63, 64, 65, 66, 71, 72, 73, 75, 78, 81, 82, 86, 88, 90, 91, 92, 94, 95, 96}\n"
      ]
     }
    ],
    "source": [
     "# Your code here\n",
-    "yi= set5\n",
-    "er= set3\n",
     "\n",
-    "set6= set6.update(yi)\n",
-    "set6= set6.update(er)\n"
+    "nset3= list(set3)\n",
+    "nset5= list(set5)\n",
+    "set6.update(nset3)\n",
+    "set6.update(nset5)\n",
+    "print (set6)"
    ]
   },
   {
@@ -341,23 +338,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{}\n"
+      "{0, 1, 2, 3, 5, 9, 10, 11, 12, 13, 18, 19, 20, 22, 23, 24, 25, 27, 28, 29, 34, 35, 36, 38, 39, 43, 44, 47, 48, 49, 50, 51, 52, 53, 59, 60, 62, 63, 64, 65, 66, 71, 72, 73, 75, 78, 81, 82, 86, 88, 90, 91, 92, 94, 95, 96}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +382,7 @@
      "output_type": "stream",
      "text": [
       "False\n",
-      "False\n"
+      "True\n"
      ]
     }
    ],
@@ -409,11 +406,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 41, 43, 44, 47, 48, 49, 50, 51, 52, 53, 54, 55, 58, 59, 60, 62, 63, 64, 65, 66, 68, 69, 70, 71, 72, 73, 75, 76, 77, 78, 79, 81, 82, 84, 85, 86, 88, 89, 90, 91, 92, 94, 95, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "un = set3.union(set4).union(set5)\n",
+    "print(un)\n",
+    "un = un.union(set1).union(set2)"
    ]
   },
   {
@@ -425,11 +433,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1.pop()\n",
+    "#.pop no elimina un valor aleatorio?"
    ]
   },
   {
@@ -445,11 +466,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "for i in sample_list_1:\n",
+    "    "
    ]
   }
  ],
