--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -45,7 +45,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[66, 90, 18, 1, 38, 23, 9, 96, 59, 86, 82, 72, 1, 81, 13, 71, 94, 34, 65, 78, 50, 47, 0, 50, 24, 29, 52, 73, 88, 1, 75, 95, 75, 78, 25, 38, 13, 44, 10, 95, 75, 48, 51, 2, 63, 39, 47, 20, 19, 64, 62, 96, 3, 47, 91, 36, 27, 5, 35, 82, 20, 28, 1, 24, 49, 22, 12, 86, 53, 11, 82, 60, 12, 43, 25, 53, 78, 27, 92, 71]\n",
+      "[58, 32, 38, 90, 71, 14, 93, 84, 47, 100, 8, 20, 61, 81, 60, 21, 89, 26, 32, 53, 50, 59, 66, 24, 53, 18, 44, 64, 27, 7, 14, 21, 20, 52, 44, 87, 52, 81, 40, 50, 29, 41, 38, 47, 33, 0, 66, 86, 16, 78, 1, 15, 29, 54, 11, 80, 70, 44, 10, 56, 13, 42, 27, 69, 58, 39, 45, 82, 41, 6, 13, 33, 32, 91, 90, 90, 75, 12, 43, 24]\n",
       "80\n"
      ]
     }
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "56"
+       "57"
       ]
      },
      "execution_count": 3,
@@ -117,8 +117,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[28, 70, 33, 95, 98, 39, 90, 19, 29, 92, 55, 97, 47, 99, 89, 49, 10, 69, 5, 54, 65, 21, 64, 50, 17, 66, 22, 52, 96, 37, 76, 68, 48, 44, 75, 81, 30, 84, 41, 77, 79, 4, 35, 16, 31, 7, 82, 60, 12, 32, 94, 58, 6, 43, 8, 63, 85, 26]\n",
-      "58\n"
+      "[80, 100, 25, 76, 24, 15, 36, 67, 77, 20, 57, 10, 27, 58, 98, 50, 23, 54, 79, 51, 33, 14, 99, 22, 74, 12, 9, 19, 53, 62, 32, 39, 31, 85, 34, 8, 89, 64, 2, 81, 94, 35, 41, 45, 11, 52, 82, 66, 95, 30, 16, 44, 73, 69, 56, 70, 88]\n",
+      "57\n"
      ]
     }
    ],
@@ -154,7 +154,7 @@
     {
      "data": {
       "text/plain": [
-       "58"
+       "57"
       ]
      },
      "execution_count": 5,
@@ -186,7 +186,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "27\n"
+      "26\n"
      ]
     }
    ],
@@ -212,7 +212,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "29\n"
+      "26\n"
      ]
     }
    ],
@@ -238,7 +238,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{5, 10, 12, 19, 22, 28, 29, 35, 39, 43, 44, 47, 48, 49, 50, 52, 60, 63, 64, 65, 66, 75, 81, 82, 90, 92, 94, 95, 96}\n"
+      "{8, 10, 11, 12, 14, 15, 16, 20, 24, 27, 32, 33, 39, 41, 44, 45, 50, 52, 53, 54, 56, 58, 64, 66, 69, 70, 80, 81, 82, 89, 100}\n"
      ]
     }
    ],
@@ -315,7 +315,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 1, 2, 3, 5, 9, 10, 11, 12, 13, 18, 19, 20, 22, 23, 24, 25, 27, 28, 29, 34, 35, 36, 38, 39, 43, 44, 47, 48, 49, 50, 51, 52, 53, 59, 60, 62, 63, 64, 65, 66, 71, 72, 73, 75, 78, 81, 82, 86, 88, 90, 91, 92, 94, 95, 96}\n"
+      "{0, 1, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 18, 20, 21, 24, 26, 27, 29, 32, 33, 38, 39, 40, 41, 42, 43, 44, 45, 47, 50, 52, 53, 54, 56, 58, 59, 60, 61, 64, 66, 69, 70, 71, 75, 78, 80, 81, 82, 84, 86, 87, 89, 90, 91, 93, 100}\n"
      ]
     }
    ],
@@ -345,7 +345,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 1, 2, 3, 5, 9, 10, 11, 12, 13, 18, 19, 20, 22, 23, 24, 25, 27, 28, 29, 34, 35, 36, 38, 39, 43, 44, 47, 48, 49, 50, 51, 52, 53, 59, 60, 62, 63, 64, 65, 66, 71, 72, 73, 75, 78, 81, 82, 86, 88, 90, 91, 92, 94, 95, 96}\n"
+      "{0, 1, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 18, 20, 21, 24, 26, 27, 29, 32, 33, 38, 39, 40, 41, 42, 43, 44, 45, 47, 50, 52, 53, 54, 56, 58, 59, 60, 61, 64, 66, 69, 70, 71, 75, 78, 80, 81, 82, 84, 86, 87, 89, 90, 91, 93, 100}\n"
      ]
     },
     {
@@ -413,7 +413,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 41, 43, 44, 47, 48, 49, 50, 51, 52, 53, 54, 55, 58, 59, 60, 62, 63, 64, 65, 66, 68, 69, 70, 71, 72, 73, 75, 76, 77, 78, 79, 81, 82, 84, 85, 86, 88, 89, 90, 91, 92, 94, 95, 96, 97, 98, 99}\n"
+      "{0, 1, 2, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 29, 30, 31, 32, 33, 34, 35, 36, 38, 39, 40, 41, 42, 43, 44, 45, 47, 50, 51, 52, 53, 54, 56, 57, 58, 59, 60, 61, 62, 64, 66, 67, 69, 70, 71, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 84, 85, 86, 87, 88, 89, 90, 91, 93, 94, 95, 98, 99, 100}\n"
      ]
     }
    ],
@@ -433,16 +433,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12"
+       "10"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,15 +466,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{8,\n",
+       " 10,\n",
+       " 12,\n",
+       " 13,\n",
+       " 14,\n",
+       " 15,\n",
+       " 16,\n",
+       " 18,\n",
+       " 20,\n",
+       " 24,\n",
+       " 26,\n",
+       " 27,\n",
+       " 32,\n",
+       " 33,\n",
+       " 38,\n",
+       " 40,\n",
+       " 42,\n",
+       " 43,\n",
+       " 44,\n",
+       " 45,\n",
+       " 47,\n",
+       " 50,\n",
+       " 52,\n",
+       " 53,\n",
+       " 54,\n",
+       " 56,\n",
+       " 58,\n",
+       " 60,\n",
+       " 64,\n",
+       " 66,\n",
+       " 70,\n",
+       " 75,\n",
+       " 78,\n",
+       " 80,\n",
+       " 82,\n",
+       " 84,\n",
+       " 86,\n",
+       " 87,\n",
+       " 90,\n",
+       " 93,\n",
+       " 100}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "\n",
+    "set(set1).difference(list_to_remove)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n",
-    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
-    "for i in sample_list_1:\n",
-    "    "
-   ]
+   "source": []
   }
  ],
  "metadata": {
