--- a/module-1/lab-lambda-functions/your-code/main.ipynb
+++ b/module-1/lab-lambda-functions/your-code/main.ipynb
@@ -59,16 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[3, 4, 5, 6, 7, 8, 9, 10, 11, 12]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,14 +79,14 @@
     "b= []\n",
     "def modify_list(lst, fudduLambda):\n",
     "    for i in lst:\n",
-    "        b.append(lst(i))\n",
+    "        b.append(f(i))\n",
     "    return(b)\n",
-    "b"
+    "modify_list(lst,f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "[3, 4, 5, 6, 7, 8, 9, 10, 11, 12]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,12 +210,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def divisor(b,c):\n",
-    "\n",
     "    if b%c==0:\n",
     "        return(1)\n",
     "    else:\n",
@@ -319,9 +329,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Green', 'eggs'),\n",
+       " ('cheese', 'cheese'),\n",
+       " ('English', 'cucumber'),\n",
+       " ('tomato', 'tomato')]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list1 = ['Green', 'cheese', 'English', 'tomato']\n",
     "list2 = ['eggs', 'cheese', 'cucumber', 'tomato']\n",
@@ -340,9 +364,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list1 = [1,2,3,4]\n",
     "list2 = [2,3,4,5]\n",
@@ -361,9 +396,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "None\n",
+      "False\n",
+      "None\n",
+      "False\n",
+      "None\n",
+      "False\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "compare = lambda a,b: print(\"True\") if a > b else print(\"False\")\n",
@@ -386,16 +436,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Political Science', 'Essay'),\n",
+       " ('Computer Science', 'Homework'),\n",
+       " ('Engineering', 'Lab'),\n",
+       " ('Mathematics', 'Module')]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list1 = ['Engineering', 'Computer Science', 'Political Science', 'Mathematics']\n",
     "list2 = ['Lab', 'Homework', 'Essay', 'Module']\n",
     "dip= zip(list1,list2)\n",
-    "sorted(dip, key = lambda x: x[1])\n",
-    "# Your code here:\n",
-    "#sorted[1][0]"
+    "sorted(dip, key = lambda x: x[1])"
    ]
   },
   {
@@ -409,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
