--- a/module-2/lab-plotting-multiple-data-series/your-code/main.ipynb
+++ b/module-2/lab-plotting-multiple-data-series/your-code/main.ipynb
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
        "[333 rows x 5 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
        "<AxesSubplot:ylabel='Supplier'>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
     "    \"RetailSales\":\"mean\",\n",
     "    \"RetailTransfers\":\"mean\",\n",
     "    \"WarehouseSales\":\"mean\"\n",
-    "}).plot.line();"
+    "}).plot();"
    ]
   },
   {
