--- a/module-1/lab-parsing-api/your-code/main.ipynb
+++ b/module-1/lab-parsing-api/your-code/main.ipynb
@@ -29,11 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "#No pude asistir a clase por la cirugia y no he visto como encontrar/extraer la api de zalando, me vere la clase hoy viernes por la tarde."
    ]
   },
   {
