--- a/module-2/lab-pca/your-code/main.ipynb
+++ b/module-2/lab-pca/your-code/main.ipynb
@@ -33439,12 +33439,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    ">>> from statsmodels.multivariate.pca import PCA\n"
    ]
   },
   {
@@ -33456,12 +33456,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.37662907,  2.37662907,  2.37662907, ...,  0.22755315,\n",
+       "         0.22755315,  0.22755315],\n",
+       "       [-0.30753004, -0.40500299, -0.68349716, ..., -0.68349716,\n",
+       "        -0.40500299, -0.40500299],\n",
+       "       [ 0.93254857,  1.15681724,  0.93254857, ...,  0.63352369,\n",
+       "         0.35941754,  0.35941754],\n",
+       "       ...,\n",
+       "       [-1.80817356, -2.06459792, -1.73124626, ..., -0.65426398,\n",
+       "        -0.32091232, -0.67990641],\n",
+       "       [ 1.42293481,  1.44036713,  1.45779946, ...,  0.67334483,\n",
+       "         0.70820948,  0.62104786],\n",
+       "       [-0.20363951, -0.05437635, -0.07925354, ...,  0.11976401,\n",
+       "        -0.45241144,  0.09488681]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "tranScat=np.transpose(scatdog)"
    ]
   },
   {
