--- a/module-2/lab-pca/your-code/main.ipynb
+++ b/module-2/lab-pca/your-code/main.ipynb
@@ -33661,7 +33661,7 @@
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "Estan separados por ser imagenes diferentes\n"
    ]
   },
   {
